test/hello.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
  namespace: edu-practical-goldwasser
spec:
  restartPolicy: OnFailure
  containers:
  - name: hello-world
    image: hello-world
