test/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: edu-practical-goldwasser
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
