test/simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: edu-practical-goldwasser
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
